Font size for last published correct for scrolling on mobile screens

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -202,7 +202,7 @@ h1, h2, h3 {
         font-size: 16px;
     }
 
-    .planviewscroll li, .planviewscroll li {
+    .planviewscroll li, .planviewscroll span {
        font-size: 20px;
     }
 
